--- a/ilustraciones.html
+++ b/ilustraciones.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Me gusta crear ilutraciones en mi tiempo libre. Ven y da un vistazo">
-    <meta name="keywords" content="películas, series, animes, Megaman, ideas, ilustraciones, Paruro">
+    <meta name="keywords" content="películas, series, animes, Megaman, ideas, ilustraciones, Paruro, bloqueo mental">
     <title>Soy Jorwwall - Ilustraciones</title>
     <link rel="stylesheet" href="./css/estilos.css">
     <link rel="icon" href="./img/favicon.ico">
@@ -82,22 +82,22 @@
                             <div id="carouselExampleControls" class="carousel slide col-md-6 offset-md-3 carousel-dark" data-bs-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                    <img src="./img/jorwwall_ideas1.png" class="d-block w-100 img-fluid" alt="...">
+                                    <img src="./img/jorwwall_ideas1.png" class="d-block w-100 img-fluid" alt="jorwwallPensando1">
                                     </div>
                                     <div class="carousel-item">
-                                    <img src="./img/jorwwall_ideas2.png" class="d-block w-100 img-fluid" alt="...">
+                                    <img src="./img/jorwwall_ideas2.png" class="d-block w-100 img-fluid" alt="jorwwallPensando2">
                                     </div>
                                     <div class="carousel-item">
-                                    <img src="./img/jorwwall_ideas3.png" class="d-block w-100 img-fluid" alt="...">
+                                    <img src="./img/jorwwall_ideas3.png" class="d-block w-100 img-fluid" alt="jorwwallPensando3">
                                     </div>
                                     <div class="carousel-item">
-                                    <img src="./img/jorwwall_ideas4.png" class="d-block w-100 img-fluid" alt="...">
+                                    <img src="./img/jorwwall_ideas4.png" class="d-block w-100 img-fluid" alt="jorwwallPensando4">
                                     </div>
                                     <div class="carousel-item">
-                                    <img src="./img/jorwwall_ideas5.png" class="d-block w-100 img-fluid" alt="...">
+                                    <img src="./img/jorwwall_ideas5.png" class="d-block w-100 img-fluid" alt="jorwwallPensando5">
                                     </div>
                                     <div class="carousel-item">
-                                    <img src="./img/jorwwall_ideas6.png" class="d-block w-100 img-fluid" alt="...">
+                                    <img src="./img/jorwwall_ideas6.png" class="d-block w-100 img-fluid" alt="jorwwallPensando6">
                                     </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
